--- a/assets/css/populares.css
+++ b/assets/css/populares.css
@@ -1,5 +1,5 @@
 .populares {
-    padding: 3rem 0;
+    padding: 3rem 2rem;
 }
 
 .populares__conteudo {
@@ -7,6 +7,12 @@
     flex-wrap: wrap;
     grid-area: conteudo;
     padding: 1rem 0;
+}
+
+.populares__cabecalho {
+    border-bottom: 1px solid #dcdcdc;
+    display: flex;
+    justify-content: space-between;
 }
 
 .populares__card {
@@ -18,14 +24,14 @@
     margin-right: 1rem;
     width: calc(20% - 1rem);
 }
-
+.populares__card:last-child{
+ margin-right: 0;
+}
 .populares__card___imagem {
     grid-area: card-imagem;
     height: 100%;
     width: 100%;
 }
-
-
 
 .populares__card___corpo {
     display: grid;
@@ -34,4 +40,35 @@
     grid-template-rows: 50px auto;
     grid-gap: .5rem;
     padding: .75rem;
+}
+
+.populares__card___titulo {
+    color: #333333;
+    font-size: 1.5rem;
+}
+
+.populares__card___data {
+    color: #808080;
+    font-size: .9rem;
+}
+
+.populares__card___descticao {
+    color: #333333;
+    text-align: justify;
+    margin: 1rem 0;
+    font-size: .9rem;
+}
+
+.populares__titulo {
+    font-weight: 500;
+}
+
+.popilares__icone {
+    margin-right: .25rem;
+}
+
+.populares__botao {
+    background: transparent;
+    color: #333333;
+    border: none;
 }
