--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,8 +8,10 @@
 }
 
 .cabecalho {
-
     grid-area: cabecalho;
+    display: flex;
+    align-items: center;
+    padding: 0 2rem;
 }
 
 .conteudo {
