--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,11 +15,15 @@
 }
 
 .conteudo {
- 
+    padding: 0 2rem;
     grid-area: conteudo;
 }
 
 .rodape {
-    
+    background: #fdfdfd;
+    color: #333333;
+    font-size: .8rem;
+    padding: 1rem;
+    text-align: center;
     grid-area: rodape;
 }
