--- a/assets/css/responsivo.css
+++ b/assets/css/responsivo.css
@@ -22,7 +22,16 @@
     .destaques__principal, .destaques__categorias {
         grid-column: 1 / 5;
     }
-    
+    .populares__conteudo{
+        flex-direction: column;
+    }
+    .populares__card{
+        width: 100%;
+        margin-bottom:3rem;
+        margin-right: 0;
+        grid-template-rows: 150px auto;
+    }
+
 }
 
 @media (min-width:768px) {
@@ -52,8 +61,25 @@
     .destaques__categorias {
         grid-column: 1 / 3;
     }
+    .populares__conteudo{
+        flex-direction: row;
+    }
+    .populares__card{
+        width: calc(50% - 1rem);
+        margin-right: 1rem;
+        grid-template-rows: 173px auto;
+    }
 }
 
-@media (min-width:992px) {}
+@media (min-width:992px) {
+    .populares__card{
+        width: calc(33.33% - 1rem);
+    }
+}
 
-@media (min-width:1200px) {}
+@media (min-width:1200px) {
+    .populares__card{
+        width: calc(20% - 1rem);
+        margin-bottom:0;
+    }
+}
